# digit_ai

./: .gitignore  Cargo.toml  README.md
grid/: package-lock.json  package.json
grid/src/app/: app.component.html  app.component.scss  app.component.ts
src/: main.rs  main.rs.save  model.rs
