[package]
name = "digit_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#rustup default nightly
#rustup default stable

[dependencies]
nalgebra = { version = "0.32.3", features = ["rand"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
#optimath = "0.3.1"